--- a/src/assets/style/global.css
+++ b/src/assets/style/global.css
@@ -1,5 +1,18 @@
-body{
-    background-color: var(--primary);
-    color: white;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+
+*{
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
 }
+
+html{
+    font-size: 62,5%; 
+}
+body{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 
+    'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 1.6rem;
+    background-color: #0a0f1a;
+    color: #e6e9f0;
+}
+
