--- a/src/assets/style/global.css
+++ b/src/assets/style/global.css
@@ -16,3 +16,19 @@ body{
     color: #e6e9f0;
 }
 
+.form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 2.4rem;
+}
+
+.formRow{
+     display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 2.4rem;
+}
+
